# fluent-unity

./: .gitmodules  LICENSE  README.md
Rust/fluent-unity/: Cargo.toml
Rust/fluent-unity/src/: main.rs
Unity/Test/: .gitignore
Unity/Test/Assets/Plugins/: libfluent_unity.bundle
Unity/Test/Assets/Scenes/: SampleScene.unity
Unity/Test/Assets/Scripts/: RunTest.cs
Unity/Test/ProjectSettings/: ProjectSettings.asset
